--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -100,7 +100,7 @@
 \begin{tabular}{r|p{5.7in}}
     %--------------------------------------------------------
     \textsc{Aug. 2019}--      &   Infrared Processing and Analysis Center, Caltech    |   \textbf{Postdoctoral Scholar}   \\
-    \textsc{Present}          &   Expertise: Space-based Slitless Spectroscopy, HST WFC3/UVIS Imaging \\
+    \textsc{Present}          &   Expertise: Space-based Slitless Spectroscopy and Near-UV Direct Imaging \\
 %                              &   \texttt{Advisors: Drs. Harry Teplitz, James Colbert, Marc Rafelski}    \\
     \multicolumn{2}{c}{} \\[\narrow]
     %--------------------------------------------------------
@@ -133,6 +133,8 @@
 
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
+    \textsc{Mar. 2020} & Kavli Visiting Fellow, Peking University \\
+    \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Jun. 2019} & UCLA Physics and Astronomy Commencement Speaker  \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Jan. 2019} & Chinese Government Award for Outstanding Graduate Students Abroad (\$6k)   \\
@@ -155,8 +157,8 @@
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Sept. 2013} & Broida Fellowship, UCSB (\$3k)  \\
     \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Dec. 2012} & National Scholarship for Graduate Students ($\sim$\$4k)  \\
-                     & {\it The highest honorific scholarship in China conferred annually on excellent graduate students.}\\
+    \textsc{Dec. 2012} & National Scholarship for Graduate Students (CNY30k)  \\
+%                     & {\it The highest honorific scholarship in China conferred annually on excellent graduate students.}\\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Aug. 2010} & 1$^{\rm st}$ Prize for Excellent B.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province \\
     \multicolumn{2}{c}{} \\[\narrow]
@@ -172,6 +174,31 @@
 \renewcommand\arraystretch{0.3}
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
+
+    \textsc{Dec. 2020}   &   \textbf{Invited Seminar}, @ Department of Physics and Astronomy, University of Missouri \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ Purple Mountain Observatory, Nanjing \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ 2019 Nanjing University Youth Forum, Nanjing \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ Shanghai Astronomical Observatory \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ Shanghai Jiao Tong University, Shanghai \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Aug. 2019}   &   \textbf{Lunch talk}, @ \href{http://kiaa.pku.edu.cn/info/1025/5076.htm}{The Kavli Institute for 
+    Astronomy and Astrophysics at Peking University} \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Aug. 2019}   &   \textbf{Invited talk}, @ National Astronomical Observatories of China, Beijing \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Aug. 2019}   &   \textbf{Invited talk}, @ Key Laboratory of Space Utilization, CAS \\
+    \multicolumn{2}{c}{} \\
 
     \textsc{Jun. 2019}   &   \textbf{Invited talk}, @ \href{https://sites.google.com/view/clearhst19/home}{CLEAR collaboration meeting}, STScI \\
     \multicolumn{2}{c}{} \\
@@ -212,7 +239,7 @@
     \textsc{Jun. 2018}   &   \textbf{Contributed talk with conference fellowship}, @ \href{http://kiaa.pku.edu.cn/gasingalaxies/?q=program}{KIAA Forum on Gas in Galaxies}, Beijing \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{May 2018}   &   \textbf{Invited talk}, @ 2018 Nanjing University Youth Forum, Nanjing, China \\
+    \textsc{May 2018}   &   \textbf{Invited talk}, @ 2018 Nanjing University Youth Forum, Nanjing \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Feb. 2018}   &   \href{https://www.ipac.caltech.edu/event/358}{\textbf{Colloquium talk}}, @ IPAC, Caltech, Pasadena, CA \\
@@ -249,8 +276,8 @@
     \textsc{Jul. 2016}   &   \textbf{Invited talk}, @ Tsinghua University, Beijing \\
     \multicolumn{2}{c}{} \\
 
-%    \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ Nanjing University, Nanjing \\
-%    \multicolumn{2}{c}{} \\
+    \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ Nanjing University, Nanjing \\
+    \multicolumn{2}{c}{} \\
 
     \textsc{Jun. 2016}   &   \textbf{Invited talk}, @ Purple Mountain Observatory, Nanjing \\
     \multicolumn{2}{c}{} \\
@@ -280,8 +307,8 @@
 
 \begin{list}{\labelitemi}{\leftmargin=1.7em}
     \vspace*{1ex}
-    \item[1] HST-16276, \textbf{PI Wang}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
-    \item[2] JWST-ERS-1324, PI Treu: Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day
+    \item[1] HST-16276, \textbf{PI Wang}, \emph{45 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
+    \item[2] JWST-ERS-1324, PI Treu: \href{https://www.stsci.edu/jwst/observing-programs/approved-ers-programs/program-1324}{Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day}
     \item[3] HST-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
     \item[4] HST-14280, PI Bradac: Breaking Cosmic Dawn: Observing the z>7 Universe Through Cosmic Telescopes
     \item[5] VLT-0101.B-0418(A), PI Sanchez-Janssen: Chemodynamics of lensed dwarf galaxies at $1\lesssim z\lesssim 2$
@@ -350,7 +377,7 @@
 %Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 
 
-\clearpage
+%\clearpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Publications}
 
@@ -362,7 +389,8 @@
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
-9 &  \textbf{Wang, X.} et al. First Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2019, \textit{Astrophys. J.}, submitted (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) \\
+10 &  \textbf{Wang, X.} et al. Measurements of Escaping Lyman Continuum in Galaxy Stacks and Extreme Emission Line Galaxies from UVCANDELS. In prep. \\
+9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2020, \textit{Astrophys. J.}, in press (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) \\
 8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800})  \\
 7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}{arXiv:1610.07558})     \\
 6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405})  \\
