--- a/xwang_publist.tex
+++ b/xwang_publist.tex
@@ -49,12 +49,13 @@
 \pagestyle{fancy}
 \fancyhf{}      % delete current header and footer
 \lhead{Xin Wang}
-\rhead{Bibliography of Publications}
+\rhead{List of Publications}
 \cfoot{\thepage}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
+\vspace*{-.5em}
 \begingroup
 \renewcommand\arraystretch{1.2}
 \vspace*{-.5em}
@@ -62,7 +63,8 @@
 %\begin{longtable}{p{17cm}}
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 \\[\narrow]
-9 &  \textbf{Wang, X.} et al. First Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2019, \textit{Astrophys. J.}, submitted (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) \\
+10 &  \textbf{Wang, X.} et al. Measurements of Escaping Lyman Continuum in Galaxy Stacks and Extreme Emission Line Galaxies from UVCANDELS. In prep. \\
+9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) \\
 8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800})  \\
 7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}{arXiv:1610.07558})     \\
 6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405})  \\
@@ -81,7 +83,8 @@
 \multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
 \\[\narrow]
 
-19  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XIII. G800L optical spectra from the parallel fields. 2019, \textit{MNRAS}, submitted (\href{https://arxiv.org/abs/1906.00008}{arXiv:1906.00008})   \\
+20  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XIII. G800L optical spectra from the parallel fields. 2020, \textit{MNRAS}, 493, 952 (\href{https://arxiv.org/abs/1906.00008}{arXiv:1906.00008})   \\
+19  &   Morishita, T., ..., \textbf{Wang, X.}. Massive Dead Galaxies at z$\sim$2 with HST Grism Spectroscopy. I. Star Formation Histories and Metallicity Enrichment. 2019, \textit{Astrophys. J.}, 877, 141 (\href{https://arxiv.org/abs/1812.06980}{arXiv:1812.06980}) \\
 18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low Mass Galaxies at z$\sim$2. 2018, \textit{Astrophys. J.}, 880, 54 (\href{https://arxiv.org/abs/1811.11768}{arXiv:1811.11768}) \\
 17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.}, 868, 129 (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
 16  &   Quinn, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) \\
