--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -8,7 +8,7 @@
 
 \usepackage{geometry}
 \newcommand{\marg}{1in}
-\geometry{letterpaper,tmargin=\marg,bmargin=\marg,lmargin=1in,rmargin=1in,headheight=0in,headsep=.2in,footskip=.4in}
+\geometry{letterpaper,tmargin=\marg,bmargin=\marg,lmargin=1in,rmargin=1in,headheight=0in,headsep=0in,footskip=.5in}
 
 \usepackage{marvosym}
 \usepackage{fontspec} 					    %for loading fonts
@@ -28,7 +28,7 @@
 %%% PARAGRAPH
 %\addtolength{\parskip}{\baselineskip}		space prob occurs when this is set free
 \setlength{\parindent}{0in}
-\setlength{\parskip}{0.6ex plus 0.4ex minus 0.2ex}      % fontsize = 12
+\setlength{\parskip}{0.4ex plus 0.2ex minus 0.2ex}      % fontsize = 12
 
 %-------------- setup hyperref package, and colours for links
 \usepackage{hyperref}
@@ -70,12 +70,14 @@
 \begin{document}
 
 \par{\centering
-  {\LARGE \textsc{Xin Wang}}
+  {\Large \textsc{Xin Wang}}
 %  \\ Telecommunications Engineer, MSc. \bigskip    sub-title
 \par}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace*{-.5em}
 \section{Personal Information}
+\vspace*{.8ex}
 \begin{tabular}{rl}
 %    \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
 %    \textsc{Nationality:}    & Chinese   \\
@@ -89,7 +91,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Education and Employment}
-
+\vspace*{.8ex}
 \begin{tabular}{r|p{5.25in}}
   %--------------------------------------------------------
   \textsc{Aug. 2019}--      &   Infrared Processing and Analysis Center, Caltech \\[\narrow]
@@ -97,7 +99,7 @@
                                     \textbf{Postdoctoral Scholar}
                                 \end{flushright}    \\[\xnarrow]
   \textsc{Present}          &   Expertise: Space-based Slitless Spectroscopy, HST WFC3/UVIS Imaging \\
-                            &   \texttt{Advisors: Drs. Harry Teplitz, James Colbert, Marc Rafelski}    \\
+%                            &   \texttt{Advisors: Drs. Harry Teplitz, James Colbert, Marc Rafelski}    \\
   \multicolumn{2}{c}{} \\[\narrow]
   %--------------------------------------------------------
   \textsc{Sept. 2015}--     &   Dept. of Physics and Astronomy, University of California, Los Angeles \\[\narrow]
@@ -105,7 +107,7 @@
                                     \textbf{Ph.D. in Astronomy \& Astrophysics}
                                 \end{flushright}    \\[\xnarrow]
   \textsc{Jun. 2019}          &   Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of Galaxies, Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
-                            &   \texttt{Advisors: Drs. Tommaso Treu, Tucker Jones, Emanuele Daddi}     \\
+%                            &   \texttt{Advisors: Drs. Tommaso Treu, Tucker Jones, Emanuele Daddi}     \\
   \multicolumn{2}{c}{} \\[\narrow]
   %--------------------------------------------------------
   \textsc{Sept. 2013}--     &   Physics Department, University of California, Santa Barbara     \\[\narrow]
@@ -120,7 +122,7 @@
                                     \textbf{Master of Science in Astrophysics}
                                 \end{flushright}    \\[\xnarrow]
   \textsc{Jun. 2013}        &   Field of Interest: Cosmology, Galaxy Clusters, Gamma-ray Bursts. \\
-                            &   \texttt{Advisors: Drs. Yong Feng Huang, Charling Tao, Gong-Bo Zhao}   \\
+%                            &   \texttt{Advisors: Drs. Yong Feng Huang, Charling Tao, Gong-Bo Zhao}   \\
   \multicolumn{2}{c}{} \\[\narrow]
   %--------------------------------------------------------
   \textsc{Sept. 2006}--     &   Department of Astronomy, Nanjing University \\[\narrow]
@@ -138,6 +140,10 @@
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
 
+    \textsc{Mar. 2020} & Kavli Visiting Fellow, Peking University \\
+    \multicolumn{2}{c}{} \\[\narrow]
+    \textsc{Jun. 2019} & UCLA Physics and Astronomy Commencement Speaker  \\
+    \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Jan. 2019} & Chinese Government Award for Outstanding Graduate Students Abroad (\$6k)   \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Dec. 2018} & UCLA Doctoral Student Travel Grant (\$1k)   \\
@@ -158,13 +164,9 @@
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Sept. 2013} & Broida Fellowship, UCSB (\$3k)  \\
     \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Dec. 2012} & National Scholarship for Graduate Students ($\sim$\$4k)  \\
-                     & {\it The highest honorific scholarship in China conferred annually on excellent graduate students.}\\
+    \textsc{Dec. 2012} & National Scholarship for Graduate Students (CNY30k)  \\
+%                     & {\it The highest honorific scholarship in China conferred annually on excellent graduate students.}\\
     \multicolumn{2}{c}{} \\[\narrow]
-%    \textsc{Jan. 2012} & Excellent Graduate Leader in School of Astronomy and Space Sciences, Nanjing University  \\
-%    \multicolumn{2}{c}{} \\[\narrow]
-%    \textsc{Nov. 2010} & Scholarship for Excellent Graduate Students in Nanjing University \\
-%    \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Aug. 2010} & 1$^{\rm st}$ Prize for Excellent B.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province, China   \\
     \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Oct. 2009} & Scholarship of National Astronomical Observatories, Chinese Academy of Sciences
@@ -179,10 +181,59 @@
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
 
-    \textsc{Nov. 2018}   &   \href{https://obs.carnegiescience.edu/content/tbd-108}{\textbf{Colloquium talk}} @ Carnegie Observatories, Pasadena, CA \\
+    \textsc{Dec. 2020}   &   \textbf{Invited Seminar}, @ Department of Physics and Astronomy, University of Missouri \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Oct. 2018}   &   \href{http://www.astro.caltech.edu/events/tea_talks/tea_2018_2019/abstracts/wang.txt}{\textbf{Colloquium talk}} @ Caltech, Pasadena, CA \\
+    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ Purple Mountain Observatory, Nanjing \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ 2019 Nanjing University Youth Forum, Nanjing \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ Shanghai Astronomical Observatory \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ Shanghai Jiao Tong University, Shanghai \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Aug. 2019}   &   \textbf{Lunch talk}, @ \href{http://kiaa.pku.edu.cn/info/1025/5076.htm}{The Kavli Institute for 
+    Astronomy and Astrophysics at Peking University} \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Aug. 2019}   &   \textbf{Invited talk}, @ National Astronomical Observatories of China, Beijing \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Aug. 2019}   &   \textbf{Invited talk}, @ Key Laboratory of Space Utilization, CAS \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Jun. 2019}   &   \textbf{Invited talk}, @ \href{https://sites.google.com/view/clearhst19/home}{CLEAR collaboration meeting}, STScI \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Feb. 2019}   &   \textbf{Contributed talk}, @ \href{https://conferences.pa.ucla.edu/early-universe-2019/agenda.html}{Extremely Big Eyes on the Early Universe}, UCLA  \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Jan. 2019}   &   \textbf{Dissertation Talk}, @ \href{https://aas.org/meetings/aas233}{AAS 223}, Seattle    \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Dec. 2018}   &   \href{http://www.astro.columbia.edu/event?eid=584}{\textbf{Astronomy Seminar}} @ Columbia \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Dec. 2018}   &   \href{https://web.astro.princeton.edu/node/9886}{\textbf{Galread Extragalactic Discussion Group}} @ Princeton \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Dec. 2018}   &   \href{https://sites.google.com/site/stscigalaxyclub/}{\textbf{Galaxy Journal Club}} @ STScI \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Dec. 2018}   &   \href{https://www.cfa.harvard.edu/events/galaxies-cosmology-seminar?field_seminar_series_value=fall18}{\textbf{Galaxies \& Cosmology Seminar}} @ CfA Harvard \& Smithsonian \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Nov. 2018}   &   \href{https://docs.google.com/document/d/1fhFuTsbHO7ATeQEiBvRQ4fj_BDR7pM4HPMjxeMyEyh4/edit}{\textbf{IMPS Seminar}} @ UC Santa Cruz \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Nov. 2018}   &   \href{https://obs.carnegiescience.edu/content/tbd-108}{\textbf{Lunch talk}} @ Carnegie Observatories, Pasadena, CA \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Oct. 2018}   &   \href{http://www.astro.caltech.edu/events/tea_talks/tea_2018_2019/abstracts/wang.txt}{\textbf{Astronomy Tea talk}} @ Caltech, Pasadena, CA \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Aug. 2018}   &   \textbf{Contributed talk}, @ \href{http://www.arcetri.astro.it/fm7/programme.html}{Focus Meeting 7 at the XXXth IAU General Assembly}, Vienna, Austria \\
@@ -200,7 +251,7 @@
     \textsc{Feb. 2018}   &   \href{https://www.ipac.caltech.edu/event/358}{\textbf{Colloquium talk}}, @ IPAC, Caltech, Pasadena, CA \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jan. 2018}   &   \href{http://obs.carnegiescience.edu/talk_event/828}{\textbf{Colloquium talk}}, @ Carnegie Observatories, Pasadena, CA \\
+    \textsc{Jan. 2018}   &   \href{http://obs.carnegiescience.edu/talk_event/828}{\textbf{Lunch talk}}, @ Carnegie Observatories, Pasadena, CA \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Sept. 2017}   &   \textbf{Invited talk}, @ Tsinghua University, Beijing \\
@@ -212,10 +263,10 @@
     \textsc{Sept. 2017}   &   \textbf{Invited talk}, @ Shanghai Jiao Tong University, Shanghai \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Aug. 2017}   &   \textbf{Contributed talk}, @
-    \href{http://darkuniverse2017.csp.escience.cn/dct/page/65580}{Shedding Light on
-    the Dark Universe with Extremely Large Telescopes}, Lanzhou, China      \\
-    \multicolumn{2}{c}{} \\
+%    \textsc{Aug. 2017}   &   \textbf{Contributed talk}, @
+%    \href{http://darkuniverse2017.csp.escience.cn/dct/page/65580}{Shedding Light on
+%    the Dark Universe with Extremely Large Telescopes}, Lanzhou, China      \\
+%    \multicolumn{2}{c}{} \\
 
     \textsc{Jun. 2017}   &   \textbf{Contributed talk}, @
     \href{http://eas.unige.ch/EWASS2017/session.jsp?id=SS11}{Special Session 11 at
@@ -255,21 +306,24 @@
 \end{longtable}
 \endgroup
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Computer Skills}
-\hspace*{0em}
-Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\section{Computer Skills}
+%\hspace*{0em}
+%Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Approved Proposals (CoI)}
+\vspace*{-.7em}
+\section{Approved Proposals}
 
 \begin{list}{\labelitemi}{\leftmargin=1.7em}
-    \item[1] JWST-ERS-1324, PI Treu: Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day.
-    \item[2] HST-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster.
-    \item[3] HST-14280, PI Bradac: Breaking Cosmic Dawn: Observing the z>7 Universe Through Cosmic Telescopes.
-    \item[4] VLT-0101.B-0418(A), PI Sanchez-Janssen: Chemodynamics of lensed dwarf galaxies at $1\lesssim z\lesssim 2$.
-    \item[5] Keck, PI Jones: Dissecting Galaxy Formation and Testing Feedback Models on 100 pc Scales: An OSIRIS Survey of Lensed Galaxies at $z\simeq2$.
+    \vspace*{1ex}
+    \item[1] HST-16276, \textbf{PI Wang}, \emph{45 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
+    \item[2] JWST-ERS-1324, PI Treu: \href{https://www.stsci.edu/jwst/observing-programs/approved-ers-programs/program-1324}{Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day}
+    \item[3] HST-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
+    \item[4] HST-14280, PI Bradac: Breaking Cosmic Dawn: Observing the z>7 Universe Through Cosmic Telescopes
+    \item[5] VLT-0101.B-0418(A), PI Sanchez-Janssen: Chemodynamics of lensed dwarf galaxies at $1\lesssim z\lesssim 2$
+    \item[6] Keck, PI Jones: Dissecting Galaxy Formation and Testing Feedback Models on 100 pc Scales: An OSIRIS Survey of Lensed Galaxies at $z\simeq2$
 \end{list}
 
 
@@ -277,12 +331,13 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 \section{Observing Experience}
 
 \begin{tabular}{l}
-\textbullet~Keck OSIRIS, 14 nights \\
-\textbullet~Keck DEIMOS, 3 nights \\
-\textbullet~Keck MOSFIRE, 1 night \\
-\textbullet~Keck ESI, 1 night \\
-\textbullet~Lick Observatory Shane telescope, 1 night \\
-\textbullet~Steward Observatory Bok telescope, 6 nights
+    \textbullet~Keck OSIRIS, 16 nights \\
+    \textbullet~Keck DEIMOS, 3 nights \\
+    \textbullet~Keck MOSFIRE, 1 night \\
+    \textbullet~Keck ESI, 1 night \\
+    \textbullet~Steward Observatory Bok telescope, 6 nights \\
+    \textbullet~Palomar Observatory P200 telescope, 2 nights \\
+    \textbullet~Lick Observatory Shane telescope, 1 night \\
 \end{tabular}
 
 
@@ -291,11 +346,14 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 
 \begin{tabular}{l}
     \textbullet~Referee for \textit{Astrophysical Journal}, \textit{Astrophysical Journal Supplement Series} \\
-    \textbullet~External Reviewer for Chinese Telescope Access Program TAC  \\
-    \textbullet~Participant in the inaugural \href{http://www.stsci.edu/contents/news/jwst/2019/master-class-participants-selected-for-november-2019-session}{JWST Master Class} \\
-    \textbullet~Organizer of Treu Group Meetings, UCSB \& UCLA  \\
+    \textbullet~External reviewer for Chinese Telescope Access Program Time Allocation Committee  \\
+    \textbullet~Selected participant in the inaugural \href{http://www.stsci.edu/contents/news/jwst/2019/master-class-participants-selected-for-november-2019-session}{JWST Master Class} \\
+    \textbullet~Organizer of the \href{http://kiaa.pku.edu.cn/page/jwst-hands-workshop}{KIAA JWST Proposal Planning Workshop}   \\
+    \textbullet~Organizer of the \href{https://sites.google.com/view/ucla-jwst}{UCLA JWST Proposal Planning Workshop}    \\
+    \textbullet~Organizer of Treu Group Meetings, @ UCSB \& UCLA  \\
     \textbullet~Organizer of Graduate Journal Club in School of Astronomy and Space Sciences, NJU
 \end{tabular}
+
 
 %\begin{tabular}{r|p{5.3in}}
 %\textsc{2014--2015}  & Organizer of Treu Group Meetings, UCSB \& UCLA \\
@@ -336,12 +394,13 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 
 \begingroup
 \renewcommand\arraystretch{1.2}
-\vspace*{-.5em}
+%\vspace*{-.5em}
 \begin{longtable}{rp{5.8in}}
-
+%\begin{longtable}{p{17cm}}
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
-
-9 &  \textbf{Wang, X.} et al. First Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2019, \textit{Astrophys. J.}, submitted (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) \\
+\\[\narrow]
+10 &  \textbf{Wang, X.} et al. Measurements of Escaping Lyman Continuum in Galaxy Stacks and Extreme Emission Line Galaxies from UVCANDELS. In prep. \\
+9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) \\
 8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800})  \\
 7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}{arXiv:1610.07558})     \\
 6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405})  \\
@@ -355,11 +414,13 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 %\begin{list}{\labelitemi}{\leftmargin=0.5em}
 %    \item[5]\hypertarget{5}{} \textbf{Wang, X.}, \& Huang, Y. F. On the Counter-jet Emission in GRB Afterglows. 2010b, \textit{AIP Conference Proceedings}, 1279, 460 (\href{http://arxiv.org/abs/1012.0521}{arXiv:1012.0521})
 %\end{list}   \\
-
+\\[\narrow]
 \\[\narrow]
 \multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
+\\[\narrow]
 
-19  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XIII. G800L optical spectra from the parallel fields. 2019, \textit{MNRAS}, submitted (\href{https://arxiv.org/abs/1906.00008}{arXiv:1906.00008})   \\
+20  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XIII. G800L optical spectra from the parallel fields. 2020, \textit{MNRAS}, 493, 952 (\href{https://arxiv.org/abs/1906.00008}{arXiv:1906.00008})   \\
+19  &   Morishita, T., ..., \textbf{Wang, X.}. Massive Dead Galaxies at z$\sim$2 with HST Grism Spectroscopy. I. Star Formation Histories and Metallicity Enrichment. 2019, \textit{Astrophys. J.}, 877, 141 (\href{https://arxiv.org/abs/1812.06980}{arXiv:1812.06980}) \\
 18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low Mass Galaxies at z$\sim$2. 2018, \textit{Astrophys. J.}, 880, 54 (\href{https://arxiv.org/abs/1811.11768}{arXiv:1811.11768}) \\
 17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.}, 868, 129 (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
 16  &   Quinn, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) \\
@@ -381,6 +442,7 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 
 \end{longtable}
 \endgroup
+
 
 \end{document}
 %--------------------------------------------------------------------------------------------------------------------------------
