--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -81,7 +81,7 @@
 \begin{tabular}{rl}
 %    \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
 %    \textsc{Nationality:}    & Chinese   \\
-    \textsc{Current Status:}  & Postdoctoral Scholar at Caltech/IPAC    \\
+    \textsc{Current Status:}  & Postdoctoral Research Associate at Caltech/IPAC    \\
     \textsc{Email, Phone:}  & \href{mailto:wangxin@ipac.caltech.edu}{wangxin@ipac.caltech.edu}  |  +1-805-574-0025  \\
     \textsc{Web:}  & \url{http://www.astro.ucla.edu/~xwang} \\
     \textsc{Mailing Address:} & Infrared Processing and Analysis Center, Mail Code 314-6, Caltech \\
@@ -93,43 +93,32 @@
 \section{Education and Employment}
 \vspace*{.8ex}
 \begin{tabular}{r|p{5.25in}}
-  %--------------------------------------------------------
-  \textsc{Aug. 2019}--      &   Infrared Processing and Analysis Center, Caltech \\[\narrow]
-                            &   \begin{flushright}
-                                    \textbf{Postdoctoral Scholar}
-                                \end{flushright}    \\[\xnarrow]
-  \textsc{Present}          &   Expertise: Space-based Slitless Spectroscopy, HST WFC3/UVIS Imaging \\
+    %--------------------------------------------------------
+    \textsc{Aug. 2019}--      &   Infrared Processing and Analysis Center, Caltech \\
+    \textsc{Present}          &   \hfill\textbf{Postdoctoral Research Associate}    \\
+%  \textsc{Present}          &   Expertise: Space-based Slitless Spectroscopy, HST WFC3/UVIS Imaging \\
 %                            &   \texttt{Advisors: Drs. Harry Teplitz, James Colbert, Marc Rafelski}    \\
-  \multicolumn{2}{c}{} \\[\narrow]
-  %--------------------------------------------------------
-  \textsc{Sept. 2015}--     &   Dept. of Physics and Astronomy, University of California, Los Angeles \\[\narrow]
-                            &   \begin{flushright}
-                                    \textbf{Ph.D. in Astronomy \& Astrophysics}
-                                \end{flushright}    \\[\xnarrow]
-  \textsc{Jun. 2019}          &   Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of Galaxies, Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
+    \multicolumn{2}{c}{} \\[\narrow]
+    %--------------------------------------------------------
+    \textsc{Sept. 2015}--     &   Dept. of Physics and Astronomy, University of California, Los Angeles \\
+    \textsc{Jun. 2019}        &   \hfill\textbf{Ph.D. in Astronomy \& Astrophysics} \\
+%  \textsc{Jun. 2019}          &   Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of Galaxies, Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
 %                            &   \texttt{Advisors: Drs. Tommaso Treu, Tucker Jones, Emanuele Daddi}     \\
-  \multicolumn{2}{c}{} \\[\narrow]
-  %--------------------------------------------------------
-  \textsc{Sept. 2013}--     &   Physics Department, University of California, Santa Barbara     \\[\narrow]
-                            &   \begin{flushright}
-                                    \textbf{Master of Arts in Physics}
-                                \end{flushright}    \\[\xnarrow]
-  \textsc{Jun. 2015}        &   Graduate Course Cumulative GPA: 3.96     \\
-  \multicolumn{2}{c}{} \\[\narrow]
-  %--------------------------------------------------------
-  \textsc{Sept. 2010}--     &   School of Astronomy and Space Sciences, Nanjing University      \\[\narrow]
-                            &   \begin{flushright}
-                                    \textbf{Master of Science in Astrophysics}
-                                \end{flushright}    \\[\xnarrow]
-  \textsc{Jun. 2013}        &   Field of Interest: Cosmology, Galaxy Clusters, Gamma-ray Bursts. \\
+    \multicolumn{2}{c}{} \\[\narrow]
+    %--------------------------------------------------------
+    \textsc{Sept. 2013}--     &   Physics Department, University of California, Santa Barbara     \\
+    \textsc{Jun. 2015}        &   \hfill\textbf{Master of Arts in Physics}      \\
+%  \textsc{Jun. 2015}        &   Graduate Course Cumulative GPA: 3.96     \\
+    \multicolumn{2}{c}{} \\[\narrow]
+    %--------------------------------------------------------
+    \textsc{Sept. 2010}--     &   School of Astronomy and Space Sciences, Nanjing University      \\
+    \textsc{Jun. 2013}        &   \hfill\textbf{Master of Science in Astrophysics}      \\
+%  \textsc{Jun. 2013}        &   Field of Interest: Cosmology, Galaxy Clusters, Gamma-ray Bursts. \\
 %                            &   \texttt{Advisors: Drs. Yong Feng Huang, Charling Tao, Gong-Bo Zhao}   \\
-  \multicolumn{2}{c}{} \\[\narrow]
-  %--------------------------------------------------------
-  \textsc{Sept. 2006}--     &   Department of Astronomy, Nanjing University \\[\narrow]
-                            &   \begin{flushright}
-                                    \textbf{Bachelor of Science in Astronomy}
-                                \end{flushright}    \\[\xnarrow]
-  \textsc{Jun. 2010}        &   Weighted Average Score: 87.68/100; Ranking: 2$^{\rm nd}$/26
+    \multicolumn{2}{c}{} \\[\narrow]
+    %--------------------------------------------------------
+    \textsc{Sept. 2006}--     &   Department of Astronomy, Nanjing University \\
+    \textsc{Jun. 2010}        &   \hfill\textbf{Bachelor of Science in Astronomy}
   %========================================================
 \end{tabular}
 
@@ -318,12 +307,16 @@
 
 \begin{list}{\labelitemi}{\leftmargin=1.7em}
     \vspace*{1ex}
-    \item[1] HST-16276, \textbf{PI Wang}, \emph{45 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
-    \item[2] JWST-ERS-1324, PI Treu: \href{https://www.stsci.edu/jwst/observing-programs/approved-ers-programs/program-1324}{Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day}
-    \item[3] HST-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
-    \item[4] HST-14280, PI Bradac: Breaking Cosmic Dawn: Observing the z>7 Universe Through Cosmic Telescopes
-    \item[5] VLT-0101.B-0418(A), PI Sanchez-Janssen: Chemodynamics of lensed dwarf galaxies at $1\lesssim z\lesssim 2$
-    \item[6] Keck, PI Jones: Dissecting Galaxy Formation and Testing Feedback Models on 100 pc Scales: An OSIRIS Survey of Lensed Galaxies at $z\simeq2$
+    \item[1] HST-GO-16276, \textbf{PI Wang}, \emph{45 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
+    \item[2] JWST-ERS-01324, PI Treu: \href{https://www.stsci.edu/jwst/observing-programs/approved-ers-programs/program-1324}{Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day}
+    \item[3] HST-GO-15647, PI Teplitz: Ultraviolet Imaging of the Cosmic Assembly Near-infrared Deep Extragalactic Legacy Survey Fields (UVCANDELS)
+    \item[4] HST-GO-13459, PI Treu: The Grism Lens-Amplified Survey from Space (GLASS)
+%    \item[5] HST-DDT-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
+%    \item[4] HST-14280, PI Bradac: Breaking Cosmic Dawn: Observing the z>7 Universe Through Cosmic Telescopes
+%    \item[5] VLT-0101.B-0418(A), PI Sanchez-Janssen: Chemodynamics of lensed dwarf galaxies at $1\lesssim z\lesssim 2$
+    \item[5] Keck, PI Jones: Dissecting Galaxy Formation and Testing Feedback Models on 100 pc Scales: An OSIRIS Survey of Lensed Galaxies at $z\simeq2$
+    \item[6] JWST-GO-01571, PI Malkan: PASSAGE--Parallel Application of Slitless Spectroscopy to Analyze Galaxy Evolution
+    \item[7] JWST-GO-02136, PI Jones: The emergence of the modern Hubble sequence revealed by JWST slit-stepping
 \end{list}
 
 
@@ -347,6 +340,7 @@
 \begin{tabular}{l}
     \textbullet~Referee for \textit{Astrophysical Journal}, \textit{Astrophysical Journal Supplement Series} \\
     \textbullet~External reviewer for Chinese Telescope Access Program Time Allocation Committee  \\
+    \textbullet~External reviewer for HST Cycle 29 Time Allocation Committee \\
     \textbullet~Selected participant in the inaugural \href{http://www.stsci.edu/contents/news/jwst/2019/master-class-participants-selected-for-november-2019-session}{JWST Master Class} \\
     \textbullet~Organizer of the \href{http://kiaa.pku.edu.cn/page/jwst-hands-workshop}{KIAA JWST Proposal Planning Workshop}   \\
     \textbullet~Organizer of the \href{https://sites.google.com/view/ucla-jwst}{UCLA JWST Proposal Planning Workshop}    \\
@@ -390,7 +384,7 @@
 
 \clearpage
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Publications}
+\section{Publications\hfill Full list available at \href{https://ui.adsabs.harvard.edu/public-libraries/D2s74Q15TomjQ7uGtxK5gQ}{ADS}}
 
 \begingroup
 \renewcommand\arraystretch{1.2}
@@ -400,15 +394,26 @@
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 \\[\narrow]
 10 &  \textbf{Wang, X.} et al. Measurements of Escaping Lyman Continuum in Galaxy Stacks and Extreme Emission Line Galaxies from UVCANDELS. In prep. \\
-9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) \\
-8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800})  \\
-7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}{arXiv:1610.07558})     \\
-6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405})  \\
-5 &  Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II. Gas-Phase Metallicity and Radial Gradients in an Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107 (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967})    \\
-4 &  \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas Mass Fraction Using the Cosmic Distance-Duality Relation and Type Ia Supernovae. 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077})  \\
-3 &  \textbf{Wang, X.}, Meng, X.-L. et al. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol. Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136})  \\
-2 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. Constraint on the Counter-jet Emission in GRB Afterglows from GRB 980703. 2010, \textit{Sci. China-Phys. Mech. Astron.}, 53 (Suppl.1), 259     \\
-1 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. On the Afterglow from the Receding Jet of Gamma-Ray Bursts. 2009, \textit{Astron. Astrophys.}, 505, 1213 (\href{http://arxiv.org/abs/0903.3119}{arXiv:0903.3119})    \\
+9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless 
+    Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) [8 citations] \\
+8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 
+    94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800}) [20 citations]  \\
+7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic 
+    noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}
+    {arXiv:1610.07558}) [38 citations]    \\
+6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from 
+    frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405}) 
+    [43 citations] \\
+5 &  Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II. Gas-Phase Metallicity and Radial Gradients in an 
+    Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107 (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967}) [49 citations] \\
+4 &  \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas Mass Fraction Using the Cosmic Distance-Duality 
+    Relation and Type Ia Supernovae. 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077}) [3 citations] \\
+3 &  \textbf{Wang, X.}, Meng, X.-L. et al. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol. 
+    Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136}) [24 citations] \\
+2 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. Constraint on the Counter-jet Emission in GRB Afterglows from GRB 980703. 2010, \textit{Sci. 
+    China-Phys. Mech. Astron.}, 53 (Suppl.1), 259 [3 citations]    \\
+1 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. On the Afterglow from the Receding Jet of Gamma-Ray Bursts. 2009, \textit{Astron. Astrophys.}, 
+    505, 1213 (\href{http://arxiv.org/abs/0903.3119}{arXiv:0903.3119}) [8 citations]   \\
 %\multicolumn{1}{c}{\textsc{Conference Contributions, Unrefereed}}    \\
 %\vspace{-0.4cm}
 %\begin{list}{\labelitemi}{\leftmargin=0.5em}
@@ -419,26 +424,50 @@
 \multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
 \\[\narrow]
 
-20  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XIII. G800L optical spectra from the parallel fields. 2020, \textit{MNRAS}, 493, 952 (\href{https://arxiv.org/abs/1906.00008}{arXiv:1906.00008})   \\
-19  &   Morishita, T., ..., \textbf{Wang, X.}. Massive Dead Galaxies at z$\sim$2 with HST Grism Spectroscopy. I. Star Formation Histories and Metallicity Enrichment. 2019, \textit{Astrophys. J.}, 877, 141 (\href{https://arxiv.org/abs/1812.06980}{arXiv:1812.06980}) \\
-18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low Mass Galaxies at z$\sim$2. 2018, \textit{Astrophys. J.}, 880, 54 (\href{https://arxiv.org/abs/1811.11768}{arXiv:1811.11768}) \\
-17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.}, 868, 129 (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
-16  &   Quinn, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) \\
-15  &   Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.} et al.  Metal Deficiency in Two Massive Dead Galaxies at z$\sim$2. 2018, \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852})   \\
-14  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XII. Spatially Resolved Galaxy Star Formation Histories and True Evolutionary Paths at z$>$1. 2018, \textit{Astron. J.}, 156, 29 (\href{https://arxiv.org/abs/1710.00843}{arXiv:1710.00843})   \\
-13  &   Kelly, P. L., ..., \textbf{Wang, X.} et al. Extreme magnification of an individual star at redshift 1.5 by a galaxy-cluster lens. 2018, \textit{Nature Astronomy}, 2, 334 (\href{https://arxiv.org/abs/1706.10279}{arXiv:1706.10279})    \\
-12  &   Williams, P. R., ..., \textbf{Wang, X.} Discovery of three strongly lensed quasars in the Sloan Digital Sky Survey. 2018, \textit{MNRAS}, 477L, 70 (\href{https://arxiv.org/abs/1706.01506}{arXiv:1706.01506})  \\
-11  &   Schmidt, K. B., ..., \textbf{Wang, X.} The Grism Lens-Amplified Survey from Space (GLASS). XI. Detection of CIV in Multiple Images of $z=6.11$ Ly$\alpha$ Emitter Behind RXCJ2248.7-4431. 2017, \textit{Astrophys. J.}, 839, 17 (\href{https://arxiv.org/abs/1702.04731}{arXiv:1702.04731}) \\
-10  &   Morishita, T., Abramson, L. E., Treu, T., Schmidt, K. B., Vulcani, B., \textbf{Wang, X.} Characterizing Intracluster Light in the Hubble Frontier Fields. 2017, \textit{Astrophys. J.}, 846, 139 (\href{https://arxiv.org/abs/1610.08503}{arXiv:1610.08503})  \\
-9   &   Vulcani, B., ..., \textbf{Wang, X.} The Grism lens-amplified survey from space (GLASS). VIII. The influence of the cluster properties on Halpha emitter galaxies at $0.3<z<0.7$. 2017, \textit{Astrophys. J.}, 837, 126 (\href{https://arxiv.org/abs/1610.04615}{arXiv:1610.04615})   \\
-8   &   Morishita, T., ..., \textbf{Wang, X.}, et al. The Grism Lens-Amplified Survey from Space (GLASS). IX. The dual origin of low-mass cluster galaxies as revealed by new structural analyses. 2017, \textit{Astrophys. J.}, 835, 254 (\href{https://arxiv.org/abs/1607.00384}{arXiv:1607.00384})   \\
-7   &   Huang, K., ..., \textbf{Wang, X.} Detection of Lyman-Alpha Emission From a Triple Imaged z=6.85 Galaxy Behind MACS J2129.4-0741. 2016, \textit{Astrophys. J. Letters}, 823L, 14 (\href{https://arxiv.org/abs/1605.05771}{arXiv:1605.05771})    \\
-6   &   Hoag, A., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). VI. Comparing the Mass and Light in MACSJ0416.1-2403 using Frontier Field imaging and GLASS spectroscopy. 2016, \textit{Astrophys. J.}, 831, 182 (\href{https://arxiv.org/abs/1603.00505}{arXiv:1603.00505})    \\
-5   &   Schmidt, K. B., ..., \textbf{Wang, X.} The Grism Lens-Amplified Survey from Space (GLASS). III. A census of Ly$\alpha$ Emission at $z\gtrsim$7 from HST Spectroscopy. 2016, \textit{Astrophys. J.}, 818, 38 (\href{https://arxiv.org/abs/1511.04205}{arXiv:1511.04205}) \\
-4   &   Rodney, S., ..., \textbf{Wang, X.}, et al. Illuminating a Dark Lens : A Type Ia Supernova Magnified by the Frontier Fields Galaxy Cluster Abell 2744. 2015, \textit{Astrophys. J.}, 811, 70 (\href{https://arxiv.org/abs/1505.06211}{arXiv:1505.06211})   \\
-3   &   Treu, T., Schmidt, K. B., Brammer, G. B., Vulcani, B., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). I. Survey Overview and First Data Release. 2015, \textit{Astrophys. J.}, 812, 114 (\href{https://arxiv.org/abs/1509.00475}{arXiv:1509.00475})   \\
-2   &   Schmidt, K. B., Treu, T., Brammer, G. B., Bradac, M., \textbf{Wang, X.} et al. Through the Looking GLASS: HST Spectroscopy of Faint Galaxies Lensed by the Frontier Fields Cluster MACSJ0717.5+3745. 2014, \textit{Astrophys. J. Letters}, 782L, 36 (\href{http://arxiv.org/abs/1401.0532}{arXiv:1401.0532})  \\
-1   &   Meng, X.-L., Zhang, T.-J., Zhan, H., \& \textbf{Wang, X.} Morphology of Galaxy Clusters: A Cosmological Model-Independent Test of the Cosmic Distance-Duality Relation. 2012, \textit{Astrophys. J.}, 745, 98 (\href{http://arxiv.org/abs/1104.2833}{arXiv:1104.2833})
+20  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XIII. G800L optical spectra from the 
+    parallel fields. 2020, \textit{MNRAS}, 493, 952 (\href{https://arxiv.org/abs/1906.00008}{arXiv:1906.00008}) [4 citations]  \\
+19  &   Morishita, T., ..., \textbf{Wang, X.}. Massive Dead Galaxies at z$\sim$2 with HST Grism Spectroscopy. I. Star Formation Histories and 
+    Metallicity Enrichment. 2019, \textit{Astrophys. J.}, 877, 141 (\href{https://arxiv.org/abs/1812.06980}{arXiv:1812.06980}) [25 citations] \\
+18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low 
+    Mass Galaxies at z$\sim$2. 2018, \textit{Astrophys. J.}, 880, 54 (\href{https://arxiv.org/abs/1811.11768}{arXiv:1811.11768}) [11 citations] \\
+17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.}, 868, 
+    129 (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789}) [17 citations] \\
+16  &   Finney, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, 
+    \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) [8 citations] \\
+15  &   Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.} et al.  Metal Deficiency in Two Massive Dead Galaxies at z$\sim$2. 2018, 
+    \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852}) [12 citations]  \\
+14  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XII. Spatially Resolved Galaxy Star 
+    Formation Histories and True Evolutionary Paths at z$>$1. 2018, \textit{Astron. J.}, 156, 29 (\href{https://arxiv.org/abs/1710.00843}{arXiv:
+    1710.00843}) [9 citations]  \\
+13  &   Kelly, P. L., ..., \textbf{Wang, X.} et al. Extreme magnification of an individual star at redshift 1.5 by a galaxy-cluster lens. 2018, 
+    \textit{Nature Astronomy}, 2, 334 (\href{https://arxiv.org/abs/1706.10279}{arXiv:1706.10279}) [71 citations]  \\
+12  &   Williams, P. R., ..., \textbf{Wang, X.} Discovery of three strongly lensed quasars in the Sloan Digital Sky Survey. 2018, \textit{MNRAS}, 477L, 
+    70 (\href{https://arxiv.org/abs/1706.01506}{arXiv:1706.01506}) [16 citations]  \\
+11  &   Schmidt, K. B., ..., \textbf{Wang, X.} The Grism Lens-Amplified Survey from Space (GLASS). XI. Detection of CIV in Multiple Images of $z=6.11$ 
+    Ly$\alpha$ Emitter Behind RXCJ2248.7-4431. 2017, \textit{Astrophys. J.}, 839, 17 (\href{https://arxiv.org/abs/1702.04731}{arXiv:1702.04731}) [35 citations] \\
+10  &   Morishita, T., Abramson, L. E., Treu, T., Schmidt, K. B., Vulcani, B., \textbf{Wang, X.} Characterizing Intracluster Light in the Hubble 
+    Frontier Fields. 2017, \textit{Astrophys. J.}, 846, 139 (\href{https://arxiv.org/abs/1610.08503}{arXiv:1610.08503}) [48 citations] \\
+9   &   Vulcani, B., ..., \textbf{Wang, X.} The Grism lens-amplified survey from space (GLASS). VIII. The influence of the cluster properties on 
+    Halpha emitter galaxies at $0.3<z<0.7$. 2017, \textit{Astrophys. J.}, 837, 126 (\href{https://arxiv.org/abs/1610.04615}{arXiv:1610.04615}) [13 citations]  \\
+8   &   Morishita, T., ..., \textbf{Wang, X.}, et al. The Grism Lens-Amplified Survey from Space (GLASS). IX. The dual origin of low-mass cluster 
+    galaxies as revealed by new structural analyses. 2017, \textit{Astrophys. J.}, 835, 254 (\href{https://arxiv.org/abs/1607.00384}{arXiv:1607.00384}) 
+    [34 citations]  \\
+7   &   Huang, K., ..., \textbf{Wang, X.} Detection of Lyman-Alpha Emission From a Triple Imaged z=6.85 Galaxy Behind MACS J2129.4-0741. 2016, 
+\textit{Astrophys. J. Letters}, 823L, 14 (\href{https://arxiv.org/abs/1605.05771}{arXiv:1605.05771}) [28 citations]   \\
+6   &   Hoag, A., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). VI. Comparing the Mass and Light in 
+MACSJ0416.1-2403 using Frontier Field imaging and GLASS spectroscopy. 2016, \textit{Astrophys. J.}, 831, 182 (\href{https://arxiv.org/abs/1603.00505}
+{arXiv:1603.00505}) [34 citations]   \\
+5   &   Schmidt, K. B., ..., \textbf{Wang, X.} The Grism Lens-Amplified Survey from Space (GLASS). III. A census of Ly$\alpha$ Emission at $z\gtrsim$7 
+from HST Spectroscopy. 2016, \textit{Astrophys. J.}, 818, 38 (\href{https://arxiv.org/abs/1511.04205}{arXiv:1511.04205}) [52 citations] \\
+4   &   Rodney, S., ..., \textbf{Wang, X.}, et al. Illuminating a Dark Lens : A Type Ia Supernova Magnified by the Frontier Fields Galaxy Cluster 
+Abell 2744. 2015, \textit{Astrophys. J.}, 811, 70 (\href{https://arxiv.org/abs/1505.06211}{arXiv:1505.06211}) [56 citations]  \\
+3   &   Treu, T., Schmidt, K. B., Brammer, G. B., Vulcani, B., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). I. Survey 
+Overview and First Data Release. 2015, \textit{Astrophys. J.}, 812, 114 (\href{https://arxiv.org/abs/1509.00475}{arXiv:1509.00475}) [143 citations]  \\
+2   &   Schmidt, K. B., Treu, T., Brammer, G. B., Bradac, M., \textbf{Wang, X.} et al. Through the Looking GLASS: HST Spectroscopy of Faint Galaxies 
+Lensed by the Frontier Fields Cluster MACSJ0717.5+3745. 2014, \textit{Astrophys. J. Letters}, 782L, 36 (\href{http://arxiv.org/abs/1401.0532}{arXiv:
+1401.0532}) [102 citations] \\
+1   &   Meng, X.-L., Zhang, T.-J., Zhan, H., \& \textbf{Wang, X.} Morphology of Galaxy Clusters: A Cosmological Model-Independent Test of the Cosmic 
+Distance-Duality Relation. 2012, \textit{Astrophys. J.}, 745, 98 (\href{http://arxiv.org/abs/1104.2833}{arXiv:1104.2833}) [58 citations]
 
 \end{longtable}
 \endgroup
